@@ -2221,4 +2221,9 @@
 
 "[\S\V\H]"utf
 
+/\C\X*TӅ;
+{0,6}\v+F
+/utf
+    Ӆ\x0a
+
 # End of testinput4
